<resources>
    <string name="app_name">SeptemberWorkout</string>
    <string name="date_text">Date:</string>
    <string name="repscount_text">Repeat count:</string>
    <string name="weight_text">Weight:</string>
    <string name="measure">kg.</string>
    <string name="records_txt">Records</string>
    <string name="workoutname_txt">Exercises name</string>
    <string name="svbtn_text">Save</string>
    <string name="pull_ups_text">Pull Ups</string>
    <string name="push_ups_text">Push Ups</string>
    <string name="squats_text">Squats</string>
    <string name="share_text">Share</string>
    <string name="description_text">Description</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="quit">Quit</string>
    <string name="intent_message">Our Record!</string>
    <string name="title_mock_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, vel.</string>
    <string name="description_mock_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A ab adipisci asperiores error est eveniet expedita illo impedit ipsam laboriosam maiores modi necessitatibus optio, placeat possimus quas quod sunt voluptatibus.</string>

</resources>
